--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-	"name": "express.js-starter",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"dependencies": {
-		"express": "^4.17.1"
-	},
-	"devDependencies": {},
-	"scripts": {
-		"dev": "node index.js"
-	},
-	"author": "",
-	"license": "ISC"
+  "name": "express.js-starter",
+  "version": "1.0.0",
+  "main": "index.js",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "dev": "node index.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NizarNadif/express-music-collection.git"
+  },
+  "bugs": {
+    "url": "https://github.com/NizarNadif/express-music-collection/issues"
+  },
+  "homepage": "https://github.com/NizarNadif/express-music-collection#readme",
+  "description": ""
 }
